[tool.poetry]
name = "file-system-observer"
version = "0.1.0"
description = "FSO - the file system observer of your dreams!"
authors = ["Christoph Gerneth <christoph@gerneth.info>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
