[tool.poetry]
name = "fso-broker"
version = "0.1.0"
description = "FSO broker responsible for communicationrecorder"
authors = ["Christoph Gerneth <christoph@gerneth.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
