[tool.poetry]
name = "fso-audit-agent"
version = "0.1.0"
description = "FSO file system agent monitoring files for changes and reports them."
authors = ["Christoph Gerneth <christoph@gerneth.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^6.0.0"
pydantic = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
