[tool.poetry]
name = "fso-recorder"
version = "0.1.0"
description = "Record file system events to jsonl"
authors = ["Christoph Gerneth <christoph@gerneth.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
